--- a/appointment-booking-calendar/TDE_AppCalendar/all-css.css
+++ b/appointment-booking-calendar/TDE_AppCalendar/all-css.css
@@ -52,7 +52,8 @@ version: 2.5.2
 }
 
 .yui-calcontainer.multi .groupcal {
-	padding:5px;	
+	/*padding:5px;	*/
+	padding:0px;
 	float:left;
 	position:relative;
 	background-color:#F7F9FB;
